@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Expose one knowledge function to plugin.
+Nicolas Weeger 2010-06-06
+
 CRE: display alchemy's index.
 Nicolas Weeger 2010-06-06
 
